# kam

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  NEXTCLOUD.md  README.md  audit.toml  claude_loop.sh  docker-compose.yml
.github/workflows/: ci.yml
benchmarking/: HANDOFF.md
benchmarking/design/: 02_titration.md
benchmarking/results/tables/: titration_results.tsv  titration_results_2mreads.tsv
benchmarking/results/tables_v10/: titration_results_2mreads.tsv
benchmarking/results/tables_v4/: titration_results_2mreads.tsv
benchmarking/results/tables_v6d/: titration_results_2mreads.tsv
benchmarking/scripts/: plot_results.py  run_synthetic_benchmarks.sh  run_titration_batch.py  run_titration_benchmarks.sh  score_variants.py  sweep_kmer_size.sh  tsv_to_vcf.py
benchmarking/scripts/configs/: high_depth_amplicon.yaml  twist_depth_comparison.yaml  twist_titration_series.yaml  wgs_no_umi.yaml
benchmarking/scripts/targets_by_length/: targets_120bp.fa  targets_80bp.fa
docs/: NEXTCLOUD.md  README.md
docs/analysis/: fn_investigation_2026-03-20.md
docs/analysis/fp_investigation/: round2_2026-03-21.md  round3_2026-03-21.md
docs/benchmarking/: .gitignore  README.md  build_sample_dirs.py  results_v10_2m_reads_k31.md  sv-indel-boundary.md
docs/benchmarking/01-snvindel/: HANDOFF.md  README.md
docs/benchmarking/02-sv-core/: README.md
docs/benchmarking/03-sv-extended/: README.md
docs/benchmarking/04-comparison/: README.md  alignment_baseline.csv
docs/benchmarking/05-public/: README.md
docs/benchmarking/07-snvindel-ml-boost-v1/: README.md  alignment_comparison.md  discovery-precision-analysis.md  duplex-filter-analysis.md  report.md
docs/benchmarking/comparison/: README.md  truth_variants.csv
docs/benchmarking/ml-twist-duplex/: README.md
docs/benchmarking/public/: README.md
docs/benchmarking/resources/: README.md  titration.ref.v2.redux.detection.xlsx
docs/benchmarking/scripts/: generate_paper_figures.py  generate_per_sample_tsvs.py  make_sv_targets.py  plot_results.py  score_all_results.py  sweep_kmer_size.sh  sweep_read_depth.sh
docs/benchmarking/snvindel/: README.md
docs/claudeguide/: benchmarking.md  investigation-docs.md  release.md  task-tracking.md
docs/examples/: README.md  ctdna-monitoring.toml  explore-demo.sh  fusion-detection.toml  high-sensitivity.toml  large-panel.toml  low-input.toml  minimal.toml  no-umi.toml  research-discovery.toml  simplex-umi-8bp.toml  simplex-umi-9bp.toml  sv-detection.toml  sv-high-sensitivity.toml  thorough-mode.toml  twist-umi-duplex.toml
docs/manual/: 00_overview.md  01_assemble.md  02_index.md  03_pathfind.md  04_call.md  05_outputs.md  06_cli.md  07_ml_models.md  README.md  configuration.md  docker.md  examples.md  faq.md  interpreting-results.md  troubleshooting.md  usage.md
docs/paper/: .gitignore  main.tex  main_2p.tex  main_normal.tex  main_normal_2col.tex  outline.md  references.bib
docs/planning/: core_data_model.md  design_principles.md  nextflow_integration.md
docs/project/: README.md
docs/research/: README.md  consensus_calling_algorithms.md  depth_saturation_investigation.md  endpoint_fingerprinting.md  gaps_to_fill.md  graph_building_challenges.md  hash_partition_umi_grouping.md  humid_analysis.md  inversion_detection.md  kmer_memory_strategies.md  ml_twist_duplex.md  novins_misclassification_investigation.md  sensitivity_investigation.md  snvindel_benchmark_scoring_investigation.md  statistical_calling_models.md  streaming_molecule_assembly.md  sv_detection_design.md  sv_detection_implementation.md  sv_large_detection_investigation.md  sv_sensitivity_report.md  sv_threshold_investigation.md  target_length_investigation.md  thesis_c_notes.md  tool_landscape.md  twist_skip_bases.md  twist_umi_chemistry.md
docs/reviewcycle/: 03_architecture.md  05_features.md
examples/: discovery-mode.toml  fast-mode.toml  high-specificity.toml  simplex-umi-12bp.toml  ti-pipeline.sh  ti-pipeline.toml  tumour-informed.toml  twist-umi-duplex.toml
examples/ti-pipeline/: README.md  run.sh
kam/: Cargo.toml
kam-assemble/: Cargo.toml
kam-assemble/src/: assembler.rs  clustering.rs  consensus.rs  fingerprint.rs  io.rs  lib.rs  parser.rs
kam-call/: Cargo.toml
kam-call/src/: allele.rs  caller.rs  fusion.rs  lib.rs  ml.rs  output.rs  targeting.rs
kam-call/src/caller/: classify.rs  filter.rs  mod.rs  stats.rs  types.rs
kam-core/: Cargo.toml
kam-core/src/: chemistry.rs  error.rs  kmer.rs  lib.rs  molecule.rs  qc.rs  serialize.rs
kam-index/: Cargo.toml
kam-index/src/: allowlist.rs  encode.rs  extract.rs  hash_index.rs  lib.rs
kam-ml/: Cargo.toml
kam-ml/src/: lib.rs
kam-pathfind/: Cargo.toml
kam-pathfind/src/: anchor.rs  graph.rs  lib.rs  score.rs  walk.rs
kam/models/: single-strand-v1.json  single-strand-v1.onnx  twist-duplex-v1.json  twist-duplex-v1.onnx  twist-duplex-v2.json  twist-duplex-v2.onnx
kam/src/: caller_config.rs  cli.rs  config.rs  main.rs  memory_budget.rs  metrics.rs  models.rs  output.rs  rescue.rs
kam/src/commands/: assemble.rs  call.rs  explore.rs  index.rs  mod.rs  models.rs  pathfind.rs  run.rs
scripts/benchmarking/: aggregate_sweep.py  generate_size_sweep_configs.py  generate_ultra_low_vaf_configs.py  sv_detection_limits.sh  sv_kmer_sweep.sh  sv_threshold_sweep.sh
scripts/ml/: build_real_training_data.py  build_training_data.py  build_training_data_twist_duplex.py  build_training_data_v2.py  build_training_data_v3.py  build_twist_duplex_features.py  evaluate_twist_duplex.py  export_model.py  export_model_twist_duplex.py  generate_configs.py  generate_ml2_configs.py  generate_ml3_configs.py  generate_ml_dataset.py  generate_twist_duplex_configs.py  plot_cv_results.py  rerun_failed_jobs.py  run_ml3_test_pipeline.py  run_ml3_train_pipeline.py  run_ml_pipeline.py  run_steps234.py  run_steps34.py  run_twist_duplex_pipeline.py  train_eval.py  train_eval_twist_duplex.py  train_eval_v2.py  train_eval_v3.py  train_twist_duplex.py  train_twist_duplex_v2.py  upload_single_strand.sh  upload_twist_duplex.sh
(+44208 files in other folders)
