[workspace]
members = [
    "kam-core",
    "kam-assemble",
    "kam-index",
    "kam-pathfind",
    "kam-call",
    "kam",
]
resolver = "2"

[workspace.dependencies]
needletail = "0.6"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
bincode = "1"
statrs = "0.18"
log = "0.4"
clap = { version = "4", features = ["derive"] }

# Internal crate dependencies
kam-core = { path = "kam-core" }
kam-assemble = { path = "kam-assemble" }
kam-index = { path = "kam-index" }
kam-pathfind = { path = "kam-pathfind" }
kam-call = { path = "kam-call" }
