[package]
name = "kam-call"
version = "0.1.0"
edition = "2021"
description = "Statistical variant calling with confidence intervals"

[dependencies]
kam-core = { workspace = true }
kam-pathfind = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
statrs = { workspace = true }
log = { workspace = true }
needletail = { workspace = true }

[dev-dependencies]
tempfile = "3"
