[package]
name = "kam-core"
version.workspace = true
edition.workspace = true
description = "Core types and traits for alignment-free variant detection"
license.workspace = true
repository.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
