[package]
name = "kam-ml"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Optional ML inference module for kam variant calling."

[dependencies]
kam-call = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
ort = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }

[features]
ml = ["dep:ort", "dep:ndarray"]
