[package]
name = "kam-pathfind"
version = "0.1.0"
edition = "2021"
description = "Finds variant paths through de Bruijn k-mer graphs"

[dependencies]
kam-core = { workspace = true }
kam-index = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
log = { workspace = true }
